# sms-server

./: .deepsource.toml  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: release.yml
docs/: http.md
docs/redoc/: index.html
docs/swagger/: index.html
examples/chatgpt-sms/src/: main.rs  types.rs
examples/websocket-logger/: Cargo.toml
examples/websocket-logger/src/: main.rs
src/: app.rs  config.rs  events.rs  main.rs  webhooks.rs
src/http/: mod.rs  openapi.rs  routes.rs  types.rs  websocket.rs
src/modem/: buffer.rs  commands.rs  handlers.rs  mod.rs  parsers.rs  sender.rs  state_machine.rs  types.rs  worker.rs
src/sms/: database.rs  encryption.rs  mod.rs  multipart.rs
src/sms/schemas/: sqlite.sql
