[package]
name = "sms-server"
version = "3.5.4"
edition = "2021"
license = "AGPL-3.0-only"
build = "build.rs"
description = "SMS server for GSM modem hardware with HTTP/WebSocket APIs, encrypted message storage, delivery tracking, and GNSS location support. Designed for Raspberry Pi + GSM HAT setup."
keywords = ["sms", "gsm", "sim", "sms-server"]
categories = ["hardware-support", "web-programming::websocket", "web-programming::http-server", "database"]
homepage = "https://github.com/morgverd/sms-server"
repository = "https://github.com/morgverd/sms-server"
readme = "README.md"
authors = ["morgverd <morgverd@gmail.com>"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "sms-server"
path = "src/main.rs"

[features]
default = ["gpio", "http-server", "db-sqlite", "tls-rustls"]
http-server = ["dep:tower-http", "dep:axum", "dep:axum-server", "dep:tower", "dep:dashmap"]
sentry = ["dep:sentry", "dep:sentry-tracing", "dep:sentry-anyhow", "dep:sentry-panic"]

# Used for Raspberry Pi GPIO hat power pin.
gpio = ["dep:rppal"]

# OpenAPI spec generator.
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui", "sms-types/openapi"]

# SQLite doesn't need TLS, so it just uses basic tokio runtime.
db-sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]

# HTTP TLS options for crates that use HTTP.
tls-rustls = ["dep:rustls", "reqwest/rustls-tls", "sentry?/rustls", "axum-server?/tls-rustls"]
tls-native = ["reqwest/native-tls", "sentry?/native-tls", "axum-server?/tls-openssl"]

[dependencies]
sms-pdu = "1.1.0"
sms-types = { version = "2.0.0", features = ["sqlx"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "parking_lot", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6" }
clap = { version = "4.5.39", features = ["derive"] }
toml = { version = "0.9.5", default-features = false, features = ["serde", "parse"] }
reqwest = { version = "0.12.19", default-features = false, features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
tokio-serial = "5.4.5"
hex = "0.4.3"
rand = "0.9.1"
base64 = "0.22.1"
aes-gcm = "0.10.3"
cipher = "0.4.4"
futures = "0.3.31"
num-traits = "0.2.19"
dotenv = "0.15.0"
uuid = { version = "1.18.0", features = ["v4"] }
serde_json = "1.0.142"

# Optional GPIO feature.
rppal = { version = "0.22.1", optional = true }

# Optional HTTP Server.
tower-http = { version = "0.6.6", optional = true, features = ["cors", "set-header"] }
axum = { version = "0.8.4", optional = true, features = ["ws"] }
axum-server = { version = "0.8.0", optional = true }
tower = { version = "0.5.2", optional = true }
dashmap = { version = "6.1.0", optional = true }

# Optional HTTP TLS.
rustls = { version = "0.23", optional = true, features = ["aws-lc-rs"] }

# Optional OpenAPI spec generator.
utoipa = { version = "5.4.0", optional = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", optional = true, features = ["axum"] }

# Optional Sentry.
sentry = { version = "0.46.1", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "release-health", "tower-axum-matched-path"], optional = true }
sentry-tracing = { version = "0.46.1", optional = true }
sentry-anyhow = { version = "0.46.1", optional = true }
sentry-panic = { version = "0.46.1", optional = true }
